# sslog

./: .gitignore  .pre-commit-config.yaml  app.py  bench.py  pyproject.toml  readme.md  taskfile.yaml  test.py
.github/: mergify.yml
.github/workflows/: build.yaml  lint.yaml  release.yaml
sslog/: __init__.py  _base.py  _catch.py  _default.py  _out.py  _process.py
